compiler/testData/diagnostics/tests/annotations/JavaAnnotationConstructors.kt
import java.lang.annotation.*

@java.lang.annotation.Retention(RetentionPolicy.CLASS)
annotation class my

Retention(RetentionPolicy.RUNTIME)
<!DEPRECATED_JAVA_ANNOTATION!>Target(ElementType.ANNOTATION_TYPE, ElementType.CONSTRUCTOR)<!>
annotation class my1